--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "multihash",
+  "name": "@awesomelewis2007/multihash",
   "version": "1.0.0",
   "description": "Hash strings trough multiple hashing algorithms and string manipulation functions",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "node test/test.js"
   },
@@ -18,5 +18,9 @@
   "homepage": "https://github.com/awesomelewis2007/multihash#readme",
   "dependencies": {
     "base32": "^0.0.7"
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
   }
 }
