--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "base32": "^0.0.7",
     "bcrypt": "^5.1.0",
+    "chalk": "^5.2.0",
     "js-sha3": "^0.8.0"
   },
   "directories": {
