--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/awesomelewis2007/multihash#readme",
   "dependencies": {
+    "ansi-colors": "^4.1.3",
     "base32": "^0.0.7",
     "bcrypt": "^5.1.0",
-    "chalk": "^5.2.0",
     "js-sha3": "^0.8.0"
   },
   "directories": {
