--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "ansi-colors": "^4.1.3",
     "base32": "^0.0.7",
     "bcrypt": "^5.1.0",
-    "js-sha3": "^0.8.0"
+    "blake2b": "^2.1.4",
+    "crc32": "^0.2.2",
+    "js-sha3": "^0.8.0",
+    "murmurhash": "^2.0.1",
+    "xxhash": "^0.3.0"
   },
   "directories": {
     "lib": "lib",
