--- a/project.json
+++ b/project.json
@@ -8,7 +8,7 @@
     "url": "https://www.github.com/lewisevans2007/multihash",
     "email": "none",
     "languages": [
-        "javascript",
+        "javascript"
     ],
     "actions": {}
 }
