--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lewisevans2007/multihash.git"
+    "url": "git+https://github.com/0x4248/multihash.git"
   },
-  "author": "Lewis Evans",
+  "author": "0x4248",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/lewisevans2007/multihash/issues"
+    "url": "https://github.com/0x4248/multihash/issues"
   },
-  "homepage": "https://github.com/lewisevans2007/multihash#readme",
+  "homepage": "https://github.com/0x4248/multihash#readme",
   "dependencies": {
     "ansi-colors": "^4.1.3",
     "base32": "^0.0.7",
